<resources>
    <string name="app_name">NinoRooms</string>

    <string name="find_deals">

           Find Home
     </string>


    <!-- strings.xml -->


    <!-- strings.xml -->
    <string name="popular_places">

       Places to be
        </string>

    <string name="hello_prince">

     Hello, Students
    </string>


    <!-- strings.xml -->
    <string name="view_all">

View all
</string>
    <string name="tag_line">More than a house and Just Like Home</string>
    <string name="rating_price"><![CDATA[Rating & Price]]></string>
    <string name="comfort">Comfort</string>
    <string name="cheapest">Cheapest</string>
    <string name="top">Top</string>
    <string name="rooms_found">No Rooms found</string>
    <string name="home">Home</string>
    <string name="support">Support</string>

    <string name="history_menu">History</string>
    <string name="city">City</string>


    <string name="details_text">

Remarkable and world-class amenities nearby ranging from health to educational centers to shopping centers which are all a stone throw away from Ace Divino.
</string>
    <string name="non_ac_price">Non-Ac Rs.</string>
    <string name="ac_price">Ac Rs.</string>
    <string name="search_hint">College, City, Locality...</string>
    <string name="favourites">Favourites</string>

    <string name="last_section">
       We, the NinoRooms family, have one purpose: to make everyone feel safe and sound in the warmth and comfort of your homely abode.
</string>
    <string name="fridge">Fridge</string>
    <string name="machine">Laundry</string>
    <string name="todo">TODO</string>
    <string name="history">History</string>
    <string name="comfort_and_convenience">Comfort and Convenience</string>
    <string name="safety_and_homely_stay">Safety and Homely stay</string>
    <string name="food_and_drinks">Food and Drinks</string>
    <string name="pocket_friendly">Pocket-Friendly</string>
    <string name="amenities">Amenities</string>
    <string name="wifi">WiFi</string>
    <string name="tv">TV</string>
    <string name="dth">DTH</string>
    <string name="cctv">CCTV</string>
    <string name="ac">AC</string>
    <string name="generator">Generator</string>
    <string name="cooler">Cooler</string>
    <string name="what_makes_us_better">What makes us better</string>
    <string name="ace_divino">Elite Home</string>
    <string name="rs_7_640">Rs.7,640</string>
    <string name="sector_121_noida">Sector 121, Noida</string>
    <string name="_1_month">1 month</string>
    <string name="details">Details</string>
    <string name="contact_owner">Contact Owner</string>
    <string name="location">Location</string>
    <string name="facilities">Facilities</string>
    <string name="internet">Internet</string>
    <string name="power">Power</string>
    <string name="ninorooms">Nino Rooms</string>
    <string name="email_us_at">email us at:</string>
    <string name="support_ninorooms_com">support@ninorooms.com</string>
    <string name="direct_call_support">Direct Call Support</string>
    <string name="phone_number_support">+91-960-272-3097</string>
    <string name="registration">Registration</string>
    <string name="your_email_id">Your Email Id</string>
    <string name="full_name">Full Name</string>
    <string name="ninorooms_name">Ninorooms</string>
    <string name="mobile">Mobile</string>
    <string name="phone_number">9602723097</string>
    <string name="register_button_text">Register</string>
    <string name="your_email_id_signin">Your Email Id</string>
    <string name="password">Password</string>
    <string name="log_out">Log out</string>


</resources>
