<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ss.com.bannerslider.Slider
                    app:slider_animateIndicators="true"
                    android:id="@+id/banner_slider1"
                    android:layout_width="match_parent"
                    app:slider_interval="3000"
                    app:slider_loopSlides="true"
                    app:slider_selectedSlideIndicator="@drawable/unselected_slide_indicator"
                    android:layout_height="400dp" />


                <ImageView
                    android:adjustViewBounds="true"
                    android:background="@drawable/tint_arrowback"
                    android:clickable="true"
                    android:contentDescription="@string/todo"
                    android:focusable="true"
                    android:src="@drawable/ic_black_back_arrow"
                    android:tint="@android:color/transparent"
                    android:id="@+id/arrow_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:tintMode="src_in"
                    tools:layout_gravity="center" />


                <ImageButton
                    android:id="@+id/bookmark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="25dp"
                    android:background="@drawable/ic_bookmark_unactive"
                    android:contentDescription="@string/todo" />


                <TextView
                    android:id="@+id/pg_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="410dp"
                    android:text="@string/ace_divino"
                    android:textAppearance="@style/pg_name" />

                <TextView
                    android:id="@+id/ac_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="410dp"
                    android:layout_marginEnd="25dp"
                    android:text="@string/rs_7_640"
                    android:textAppearance="@style/price_tag" />


                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="460dp"
                    android:text="@string/sector_121_noida"
                    android:textAppearance="@style/address" />

                <TextView
                    android:id="@+id/non_ac_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="460dp"
                    android:layout_marginEnd="25dp"
                    android:text="@string/_1_month"
                    android:textAppearance="@style/month" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="500dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/vertical_line" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="520dp"
                    android:text="@string/details"
                    android:textAppearance="@style/details" />

                <TextView
                    android:id="@+id/details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="560dp"
                    android:layout_marginEnd="25dp"
                    android:text="@string/details_text"
                    android:textAppearance="@style/details_text" />


                <TextView
                    android:adjustViewBounds="true"
                    android:background="@drawable/tint_select_room"
                    android:src="@drawable/select_room"
                    android:text="@string/contact_owner"
                    android:tint="@android:color/transparent"
                    android:id="@+id/contact_owner"
                    android:layout_width="650dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="700dp"
                    android:layout_marginEnd="25dp"
                    android:tintMode="src_in"
                    android:clickable="true"
                    android:padding="15dp"
                    android:focusable="true"
                    android:textAlignment="center"
                    android:textColor="#FFF"
                    android:textSize="21sp"
                    tools:layout_gravity="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="785dp"
                    android:text="@string/location"
                    android:textAppearance="@style/details" />


                <ImageButton
                    android:id="@+id/location_call"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="match_parent"
                    android:layout_height="167dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="840dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/google_map"
                    android:contentDescription="@string/todo" />

                <ImageButton

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="188dp"
                    android:layout_marginTop="910dp"
                    android:background="@drawable/gps"
                    android:contentDescription="@string/todo" />

                <ImageButton

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="197dp"
                    android:layout_marginTop="920dp"
                    android:background="@drawable/gps_point"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="1030dp"
                    android:text="@string/facilities"
                    android:textAppearance="@style/details" />



                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1080dp"
                    android:orientation="horizontal"
                    android:padding="25dp"
                    android:layout_width="match_parent"
                    android:baselineAligned="false"
                    android:weightSum="100">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_wifi_facility" />

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:text="@string/internet"
                            android:textAlignment="center"
                            android:textAppearance="@style/facility_text" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_ac_facility" />

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:text="@string/ac"
                            android:textAlignment="center"
                            android:textAppearance="@style/facility_text" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_powerbackup_facility" />

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:text="@string/power"
                            android:textAlignment="center"
                            android:textAppearance="@style/facility_text" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_washing_machine_facility" />

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:text="@string/machine"
                            android:textAlignment="center"
                            android:textAppearance="@style/facility_text" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_cctv_facility" />

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:text="@string/cctv"
                            android:textAlignment="center"
                            android:textAppearance="@style/facility_text" />


                    </LinearLayout>


                </LinearLayout>


            </RelativeLayout>


        </androidx.cardview.widget.CardView>


    </androidx.core.widget.NestedScrollView>

</LinearLayout>