<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".SearchResultActivity"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
       >



        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimaryDark"

            app:title="">



        </androidx.appcompat.widget.Toolbar>


        <LinearLayout

            android:weightSum="100"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:layout_weight="43"
                android:layout_margin="18dp"

                android:text="@string/city"
                android:id="@+id/city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="39sp"
                android:textColor="#000"/>

            <View
                android:layout_margin="18dp"
                android:visibility="invisible"
                android:layout_weight="14"
                android:layout_width="45dp"
                android:layout_height="45dp"/>

            <ImageView
                android:clickable="true"
                android:id="@+id/filter_search"
                android:layout_margin="18dp"
                android:layout_weight="43"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/filter"
                android:focusable="true" />



        </LinearLayout>

        <!-- Line 1 -->
        <View
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:id="@+id/line_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/vertical_line"
            />

        <LinearLayout

            android:weightSum="100"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View

                android:layout_margin="5dp"
                android:visibility="invisible"
                android:layout_weight="10"
                android:layout_width="16dp"
                android:layout_height="20dp"/>


            <TextView
                android:id="@+id/top"
                android:focusable="true"
                android:clickable="true"
                android:layout_margin="5dp"
                android:text="@string/top"
                android:layout_weight="10"
                android:textAppearance="@style/filter_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/cheapest"
                android:focusable="true"
                android:clickable="true"
                android:layout_margin="5dp"
                android:text="@string/cheapest"
                android:layout_weight="25"
                android:textAppearance="@style/filter_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/rating"
                android:focusable="true"
                android:clickable="true"
                android:layout_margin="5dp"
                android:text="@string/rating_price"
                android:layout_weight="25"
                android:textAppearance="@style/filter_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/comfort"
                android:focusable="true"
                android:clickable="true"
                android:layout_margin="5dp"
                android:text="@string/comfort"
                android:layout_weight="15"
                android:textAppearance="@style/filter_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View

                android:layout_margin="5dp"
                android:visibility="invisible"
                android:layout_weight="10"
                android:layout_width="16dp"
                android:layout_height="20dp"/>






        </LinearLayout>


        <LinearLayout
            android:weightSum="10"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <View
                android:padding="10dp"
                android:layout_margin="4dp"
                android:visibility="invisible"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="50dp"/>


            <TextView
                android:layout_weight="9"
                android:id="@+id/rooms_found"
                android:padding="10dp"
                android:textAlignment="center"
                android:layout_margin="30dp"
                android:textAppearance="@style/rooms_found"
                android:text="@string/rooms_found"
                android:background="@drawable/rectangle_four"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>


            <View
                android:padding="10dp"
                android:layout_margin="4dp"
                android:visibility="invisible"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="50dp"/>




        </LinearLayout>





        <!-- recycler_view_set_up -->

        <!--    <include layout="@layout/rooms_item_view"/>-->

        <!--    <include layout="@layout/rooms_item_view"/>-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/nino_rooms_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
















    </LinearLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>
